Gallery Controller Rebuilded
-- First part of Rebuilding sub controllers is done. Further refactor is needed. (After Modules refactor)
-- Added Unified Document Listener Interface
-- Few fixes...
-- Modifed MessageInterface
-- Added Command Interface
-- Slightly modified GalleryModule and Gallery Table Model.
-- Changed ExecutorService for Cached Thread Pool.